# es-similarity-search

./: README.md  app.py  docker-compose.yml  dockerfile  hydrate_with_marco_dataset.py  pyproject.toml  requirements.txt
notebooks/: 02-nb_index_doc.ipynb  CNN_Dataset_Sematic_Simlarity_Search.ipynb  pre-process-collab.ipynb
similarity_search/: index.py  model.py  pensieve.py  utils.py
