[tool.poetry]
name = "es-similarity-search"
version = "0.1.0"
description = ""
authors = ["Tarik Setia <setia.tarik@gmail.com>"]
readme = "README.md"
packages = [{include = "similarity_search"}]

[tool.poetry.dependencies]
python = "^3.11"
eland = "^8.7.0"
shell = "^1.0.1"
ipykernel = "^6.24.0"
tqdm = "^4.65.0"
torch = "^2.0.1"
transformers = {version = "4.27.4", extras = ["torch"]}
sentence-transformers = "2.2.2"
elasticsearch = "^8.8.2"
numpy = "^1.25.1"
pandas = "^2.0.3"
swifter = "^1.3.5"
streamlit = "^1.24.1"
loguru = "^0.7.0"
pyfiglet = "^0.8.post1"


[tool.poetry.group.dev.dependencies]
black = {extras = ["jupyter"], version = "^23.7.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
